# stm32f303re-template

./: .gdbinit  Cargo.toml  memory.x
.cargo/: config.toml
examples/: blinky.rs  button.rs
src/: main.rs
