[package]
authors = ["Fesz"]
edition = "2021"
name = "stm32f303re_template"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
cortex-m-rtic = "1.1.4"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.9.2", features = ["ld", "rt", "stm32f303xe"] }

[dev-dependencies]
systick-monotonic = "1.0.1"

[[bin]]
name = "stm32f303re_template"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
